syntax = "proto3";

enum PixelOwners {
    Nobody = 0;
    Tietokilta = 1;
    Algo = 2;
    Cluster = 3;
    OulunTietoteekkarit = 4;
    TietoTeekkarikilta = 5;
    Digit = 6;
    Datateknologerna = 7;
    Sosa = 8;
}
